--- a/index.html
+++ b/index.html
@@ -6,10 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,400;1,400&family=Open+Sans&family=Poppins:ital@0;1&family=Roboto&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section>
+        <div class="half-width">
+            <h1>Stay Focused On</h1>
+            <h1 class="orange-color">My Mission 2022</h1>
+            <p>Assalamualikhum my name is afzal hossain Emon.i am student. i am studied at University of science and
+                Technology chittagong.my focsued on i am a future web devloper.....
+            </p>
+            <a class="link-button" href="https://www.linkedin.com/company/programminghero ">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="pick/person/boy.jpg" alt="">
+        </div>
+
+    </section>
 
 </body>
 
