--- a/index.html
+++ b/index.html
@@ -15,21 +15,59 @@
 </head>
 
 <body>
-    <section>
-        <div class="half-width">
-            <h1>Stay Focused On</h1>
-            <h1 class="orange-color">My Mission 2022</h1>
-            <p>Assalamualikhum my name is afzal hossain Emon.i am student. i am studied at University of science and
-                Technology chittagong.my focsued on i am a future web devloper.....
-            </p>
-            <a class="link-button" href="https://www.linkedin.com/company/programminghero ">HIRE ME</a>
-        </div>
-        <div class="half-width">
-            <img src="pick/person/boy.jpg" alt="">
+    <section class="picture">
+        <div class="flexible-container">
+            <div class="half-width">
+                <h1>Stay Focused On</h1>
+                <h1 class="orange-color">My Mission 2022</h1>
+                <p>Assalamualikhum my name is afzal hossain Emon.i am student. i am studied at University of science and
+                    Technology chittagong.my focsued on i am a future web devloper.....
+                </p>
+                <a class="link-button" href="https://www.linkedin.com/company/programminghero ">HIRE ME</a>
+            </div>
+            <div class="half-width">
+                <img src="pick/person/boy.jpg" alt="">
+            </div>
+
         </div>
 
     </section>
+    <section class="my-mission-2022">
+        <h1>My Misson <span class="orange-color">2022</span></h1>
+        <div class="flexible-container">
+            <div class="mission-item">
+                <img src="pick/mission/misson.png">
+                <h3>MISSION</h3>
+                <p>my first mission is compleate web design.and i am stuyding everything.</p>
 
+            </div>
+            <div class="mission-item">
+                <img src="pick/mission/vission.jpg">
+                <h3>VISION</h3>
+                <p>simple my vision i am cool to everthing so that's my main visionn. </p>
+            </div>
+            <div class="mission-item">
+                <img src="pick/mission/goal.png">
+                <h3>GOALS</h3>
+                <p>my first goals is doing my job respect and learn pythone web devloping </p>
+            </div>
+        </div>
+
+    </section>
+    <section class="devlop">
+        <div class="flexible-container">
+            <div class="devlop-picture">
+                <img class="flexible-container" src="pick/mission/vission.jpg" alt="">
+            </div>
+            <div class="devlop-contain">
+                <h2>Devlop without limits</h2>
+                <p>i am just devlopping web design website,pythone,graphic design.knownn those thing</p>
+                <a class="link-button" href="">DETAILS</a>
+            </div>
+        </div>
+
+    </section class="">
+    <div class="devlop-picture"></div>
 </body>
 
 </html>
