--- a/index.html
+++ b/index.html
@@ -66,8 +66,40 @@
             </div>
         </div>
 
-    </section class="">
-    <div class="devlop-picture"></div>
+    </section>
+    <section class="devlop">
+        <div class="flexible-container">
+
+            <div class="devlop-contain">
+                <h2>Devlop without limits</h2>
+                <p>i am just devlopping web design website,pythone,graphic design.knownn those thing</p>
+                <a class="link-button" href="">DETAILS</a>
+            </div>
+            <div class="devlop-picture">
+                <img class="flexible-container" src="pick/mission/goal.png" alt="">
+            </div>
+        </div>
+
+    </section>
+    <section class="devlop">
+        <div class="flexible-container">
+            <div class="devlop-picture">
+                <img class="flexible-container" src="pick/mission/omicron.jpg" alt="">
+            </div>
+            <div class="devlop-contain">
+                <h2>Devlop without limits</h2>
+                <p>i am just devlopping web design website,pythone,graphic design.knownn those thing</p>
+                <a class="link-button" href="">DETAILS</a>
+            </div>
+        </div>
+
+    </section>
+    <footer class="wrokhard">
+        <h2 class="">MISSION <span class="orange-color">2022</span></h2>
+        <p>DREAM BIG WORK HARD</p>
+    </footer>
+
+
 </body>
 
 </html>
