--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="devlop-contain">
                 <h2>Devlop without limits</h2>
-                <p>i am just devlopping web design website,pythone,graphic design.knownn those thing</p>
+                <p> omicron is very harmful so safe everyone</p>
                 <a class="link-button" href="">DETAILS</a>
             </div>
         </div>
